# birdgame

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  conanfile.py
.github/workflows/: main.yml
assets/: bird.aseprite  birdBooped.ceol  cloud.aseprite
birdgame/: CMakeLists.txt  main.cpp
birdgame/bird/: CMakeLists.txt  bird.cpp  bird.h
birdgame/sounds/: CMakeLists.txt  sounds.cpp  sounds.h
birdgame/textures/: CMakeLists.txt  textures.cpp  textures.h
birdgame/utils/: CMakeLists.txt  utils.cpp  utils.h
src/: main.cpp
